build: Configure ktlint